# cpp-simple-vector

./: CMakeLists.txt  README.RUS.md  README.md
simple-vector/: array_ptr.h  simple_vector.h
